--- a/Admin/.env
+++ b/Admin/.env
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_URL=mysql-production-0287.up.railway.app
+REACT_APP_BACKEND_URL=https://mysql-production-0287.up.railway.app
 REACT_APP_IMAGE_URL=http://localhost:5000/uploads
 REACT_APP_MAP_URL=https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
 REACT_APP_LOCATION_SEARCH_URL=https://api.opencagedata.com/geocode/v1/json
