--- a/Frontend/.env
+++ b/Frontend/.env
@@ -2,8 +2,8 @@ REACT_APP_MAP_URL=https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
 REACT_APP_LOCATION_SEARCH_URL=https://api.opencagedata.com/geocode/v1/json
 REACT_APP_LOCATION_SEARCH_API_KEY_URL=8cb684ab40454f37a9bf21cd0a4846f0
 
-REACT_APP_BACKEND_URL=http://localhost:5000/api
-REACT_APP_IMAGE_URL=http://localhost:5000/uploads
+REACT_APP_BACKEND_URL=https://xuber-service-marketplace-production.up.railway.app/api
+REACT_APP_IMAGE_URL=https://xuber-service-marketplace-production.up.railway.app/uploads
 PORT=3000   
 
 
